--- a/CSS-part/index.css
+++ b/CSS-part/index.css
@@ -1,5 +1,5 @@
 #Home-Page {
-  background-image: url("https://unbounce.com/photos/Gradient-Background.png");
+ 
   height: 100vh;
   width: 100vw;
 }
@@ -58,14 +58,17 @@
   height: 100%;
   border-radius: 20%;
 }
-.footer {
-  margin-top: 40px;
-  margin-bottom: 20px;
-  padding: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  background-color: lightcoral;
+footer {
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
+    margin-top: 40px;
+  
+    padding: 1rem;
+    display: flex;
+   
+    justify-content: space-around;
+    background-color: lightcoral;
 }
 .footer > img {
   height: 40px;
