portfolio structure almost completed

--- a/portfolio/src/components/Navbar/Navbar.css
+++ b/portfolio/src/components/Navbar/Navbar.css
@@ -2,7 +2,8 @@
   display: flex;
   position: sticky;
   top:0;
-  background-color: rgb(20, 20, 20);
+  background-color: black;
+  z-index: 999;
 }
 .navLogo {
   flex: 0.5;
