--- a/portfolio/src/components/TechExpertise/TechExpertise.css
+++ b/portfolio/src/components/TechExpertise/TechExpertise.css
@@ -4,3 +4,26 @@
     min-height: 100vh;
     width: 100%;
 }
+.techTitle{
+    text-align: center;
+    margin:20px auto;
+    padding:10px;
+    font-style: oblique;
+    font-size: 2.5em;
+    text-decoration: underline 2px;
+
+}
+
+.techContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin:20px;
+    padding: 20px;
+}
+
+
+
+
+
+
