--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -1,8 +1,20 @@
 
 .aboutMe{
-    background-color: #ea8383;
     min-height: 100vh;
     width: 100%;
+}
+.break{
+   
+    background-color: red;
+    height: 3px;
+    width: 50%;
+ margin:1px auto;
+ margin-bottom: 40px;
+}
+.commentsContainer{
+    display:  flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 
