--- a/portfolio/src/components/Navbar/NavItem/NavItem.css
+++ b/portfolio/src/components/Navbar/NavItem/NavItem.css
@@ -1,9 +1,9 @@
-.headings>h1{
+.headings h1{
     font-size: 1.6em;
     font-style:italic;
     color: bisque;
 }
-.headings>h1:hover{
+.headings h1:hover{
     cursor: pointer;
     text-decoration: underline;
     color: rgb(195, 195, 195);
