--- a/portfolio/src/components/TechExpertise/TechExpertise.css
+++ b/portfolio/src/components/TechExpertise/TechExpertise.css
@@ -1,7 +1,7 @@
 
 .techStack{
-    background-color: blueviolet;
-    min-height: 100vh;
+    padding: 3em;
+    min-height: 80vh;
     width: 100%;
 }
 .techTitle{
