--- a/portfolio/src/components/Home/Home.css
+++ b/portfolio/src/components/Home/Home.css
@@ -1,31 +1,75 @@
 .home{
-    min-height: 90vh;
+    min-height: 100vh;
     width: 100%;
+  padding-top: 2em;
     
 }
 .welcomeMsg{
-    height: 120px;
     text-align: center;
-    font-size: 30px;
-    padding: 10px;
+    height: 120px;
+     padding: 10px;
+}
+.firstN{
+    color:rgb(20, 154, 220);
+    font-size: 8vh ;
+}
+.lastN{
+    font-size: 6vh; 
+      color:purple;
 }
 
 .profileImg{
-    height: 22em;
-    width: 19em;
+    height: 100%;
+    width: 60%;
     border-radius: 19% 4% 19% 4%;
     border: 3px solid rebeccapurple;
+    position: absolute;
+    padding: 1em 0em 0em 1em;
+    right:3em;
+    
    
 }
 .homeContainer{
     display: flex;
 }
-.homeLeft{
-    flex: 0.4;
-}
 .homeRight{
-    flex:0.6
+   flex:0.4;
+    position: relative;
+    height:50vh ;
+    
 }
+.homeLeft{
+    flex:0.5;
+    margin:20px;
+    padding: 2em;
+}
+.intro{
+   font-size: 1.2em;
+    padding-right: 3em;
+    line-height: 1.2em;
+}
+.socialChannels{
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.icon{
+    
+    transform: scale(1.4);
+}
+
+.icon:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+
+}
+.connect{
+    color:gray;
+    font-style: oblique;
+}
+
+
 
 
 
