--- a/portfolio/src/components/Projects/Projects.css
+++ b/portfolio/src/components/Projects/Projects.css
@@ -1,8 +1,16 @@
 
 .projects{
-    background-color: rgb(156, 186, 64);
+   padding:4em;
     min-height: 100vh;
     width: 100%;
+ 
+}
+
+.projectContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 
