--- a/portfolio/src/components/TechExpertise/Tech/Tech.css
+++ b/portfolio/src/components/TechExpertise/Tech/Tech.css
@@ -1,5 +1,5 @@
 .technology{
-     height: 200px;
-     width: 200px;
-     padding: 15px;
+     height: 15em;
+     width: 15em;
+     padding: 40px;
 }
