--- a/portfolio/src/components/Projects/Projects.css
+++ b/portfolio/src/components/Projects/Projects.css
@@ -5,12 +5,24 @@
     width: 100%;
  
 }
+.projects >h2{
+      color: palevioletred;
+     margin-top: 10px;
+}
 
 .projectContainer{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.projectsHeading{
+   margin:4px auto;
+    height: 4em;
+    width: 50%;
+    font-size: 1.1em;
+    font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
 
