--- a/portfolio/src/components/TechExpertise/TechExpertise.css
+++ b/portfolio/src/components/TechExpertise/TechExpertise.css
@@ -14,6 +14,14 @@
 
 }
 
+.techIntro{
+  color:rgb(201, 227, 230);
+    width: 50vw;
+    margin:1em;
+    padding: 1em;
+    font-size: 1.1em;
+}
+
 .techContainer{
     display: flex;
     flex-wrap: wrap;
