--- a/Bits-and-Pieces/Dom/counter App/counter.css
+++ b/Bits-and-Pieces/Dom/counter App/counter.css
@@ -13,6 +13,7 @@ h1 {
   align-items: center;
   justify-content: center;
 }
+
 #datetime {
   height: 4em;
   font-size: 1.5rem;
@@ -54,7 +55,7 @@ li > div {
   height: 40px;
   width: 100px;
   font-size: 1.2em;
-  background-color: aqua;
+  background-color: rgb(234, 55, 35);
   border: none;
   cursor: pointer;
 }
