--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -15,6 +15,7 @@
 .commentsContainer{
     display:  flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     padding: 2em;
     width: 100vw;
       
