--- a/portfolio/src/components/Projects/Project/Project.css
+++ b/portfolio/src/components/Projects/Project/Project.css
@@ -1,4 +1,4 @@
-.singleProject{
+ .singleProject{
     background-color: rgb(10, 153, 136);
     height: 30vh;
     width: 24vw;
@@ -6,14 +6,14 @@
     display: flex;
     justify-content: center;
     align-items: center; 
-    font-size: 2em;
+    font-size: 2vw;
   
 }
 
 .singleProject:hover{
     transform: scale(1.1);
    border-radius: 5%;
-}
+} 
 
 
 
