--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -16,7 +16,7 @@
     display:  flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding: 2em;
+    padding-top:2em;
     width: 100vw;
       
 
