--- a/portfolio/src/components/About/Comment/Comment.css
+++ b/portfolio/src/components/About/Comment/Comment.css
@@ -1,12 +1,12 @@
 .commentBox{
-    background-color: rgb(25, 232, 60);
+    background-color: rgb(232, 229, 25);
     position:relative;
     height: 15em;
     width: 15em;
     margin:20px;
 }
 .comment{
-    background-color: rgb(108, 36, 241);
+    background-color: rgb(12, 182, 86);
     position: absolute;
      right: -1.2em;
      bottom: -1.2em;
@@ -14,6 +14,9 @@
     width: 100%;
     text-align: center;
     
+}
+.comment h2{
+  color:rgb(4, 2, 48)
 }
 .commentBox p{
   line-height: 1.4;
