--- a/portfolio/src/components/Home/Home.css
+++ b/portfolio/src/components/Home/Home.css
@@ -1,7 +1,7 @@
 .home{
     min-height: 100vh;
     width: 100%;
-  padding-top: 2em;
+  padding-top: 3em;
     
 }
 .welcomeMsg{
@@ -19,13 +19,13 @@
 }
 
 .profileImg{
-    height: 30vw;
+    height: 26vw;
     width: 60%;
     border-radius: 19% 4% 19% 4%;
     border: 3px solid rebeccapurple;
     position: absolute;
     padding: 1em 0em 0em 1em;
-    right:3em;
+    right:2em;
     
    
 }
@@ -40,23 +40,24 @@
 }
 .homeLeft{
     flex:0.5;
-    margin:20px;
-    padding: 2em;
-}
+    margin:0 20px;
+    padding: 0 3em;
+   
+   
+ }
 .intro{
-   font-size: 1.2em;
-    padding-right: 3em;
-    line-height: 1.2em;
+   font-size: 1.2rem;
+    padding-right: 2rem;
+    line-height: 1.2rem;
 }
 .socialChannels{
     width: 40%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 .icon{
-    
-    transform: scale(1.4);
+     transform: scale(1.4);
 }
 
 .icon:hover{
