--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -19,15 +19,23 @@ a{
     width: 44px;
     } */
 
+    
+ .headings .nav{
+      font-size:3vw;
+    }
+
   .homeLeft  .intro{
-       font-size: 11px;
+       font-size: 8px;
 
     }
+
     
   .homeLeft  .socialChannels{
-       
+      
+    
      transform: scale(0.7);
-      width: 100%;
+     width: 100%;
+      
     }
  .commentsContainer .commentBox{
       height: 16em;
