--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -57,11 +57,9 @@ input{
 }
 
 .footerLowerPart{
-   
+   margin-left: 2em;
     height: 50%;
-    display: flex;
-    justify-content: space-evenly;
-    
+     
 }
 
 .msgLogo img{
