--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -21,7 +21,7 @@ a{
 
     
  .headings .nav{
-      font-size:3vw;
+      font-size:1em;
     }
 
     .navbar .navHeadings{
@@ -29,7 +29,7 @@ a{
     }
 
   .homeLeft  .intro{
-       font-size: 8px;
+       font-size: 0.8em;
 
     }
 
