--- a/portfolio/src/components/TechExpertise/Tech/Tech.css
+++ b/portfolio/src/components/TechExpertise/Tech/Tech.css
@@ -1,5 +1,5 @@
 .technology{
-     height: 12em;
-     width: 13em;
-     padding: 40px;
+     height: 12vh;
+     width: 15vw;
+     padding: 0.5rem;
 }
