--- a/portfolio/src/components/About/Comment/Comment.css
+++ b/portfolio/src/components/About/Comment/Comment.css
@@ -1,9 +1,11 @@
 .commentBox{
     background-color: rgb(232, 229, 25);
     position:relative;
-    height: 15em;
+    height: 12em;
     width: 15em;
     margin:20px;
+    border-radius: 5%;
+    box-shadow: 0.5em 0.6em 2em  ;
 }
 .comment{
     background-color: rgb(12, 182, 86);
@@ -13,13 +15,16 @@
     height: 100%;
     width: 100%;
     text-align: center;
-    
+     border-radius: 5%;
 }
 .comment h2{
-  color:rgb(4, 2, 48)
+  color:rgb(4, 2, 48);
+  
 }
 .commentBox p{
   line-height: 1.4;
-  padding: 1em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+
  
 }
