--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -7,10 +7,10 @@
     border-radius: 50%;
 }
 .footerContainer{
-   
+  
     display: flex;
     justify-content: space-around;
-    flex:0.8;
+    flex:0.9;
     
 }
 
@@ -22,31 +22,31 @@
 }
 
 .footerRight{
+    
     display: flex;
      height: 50vh;
-     width: 40vw;
      justify-content: end;
      
     
 }
 form{
-    width: 24vw;
+    width: 100%;
 }
 
 .formfield{
-    display: flex;
     justify-content: space-between;
     margin:10px;
 
 }
 
 label{
-    font-size: 2em ;
-    margin:9px
+    margin:13px
 }
 input{
     height: 30px;
-    border-radius: 4%;
+    width:90%;
+    border-radius: 3%;
+    border:none;
     background-color: rgb(149, 245, 6);
 }
 
@@ -54,11 +54,13 @@ input{
     padding:0.5em;
     cursor: pointer;
     font-weight: 700;
+    margin-top: 1rem;
 }
 
 .footerLowerPart{
    margin-left: 2em;
-    height: 50%;
+   flex:0.1;
+   display: flex;
      
 }
 
@@ -67,11 +69,9 @@ input{
     margin-left:10px;
     cursor: pointer;
 }
-.footerLowerPart h4{
-    flex:0.9;
-    text-align: end;
-    
-}
+
+
+
 
 
 
