--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -16,10 +16,10 @@ a{
   text-decoration:none;
 }
 @media screen and (max-width: 500px) {
-  /* .navLogo .navImg{
-    height: 40px;
-    width: 44px;
-    } */
+   .navImg{
+    height: 3em !important;
+    width: 3em !important;
+    } 
 
     
  .headings .nav{
