--- a/portfolio/src/components/TechExpertise/TechExpertise.css
+++ b/portfolio/src/components/TechExpertise/TechExpertise.css
@@ -1,7 +1,7 @@
 
 .techStack{
     padding-top: 3em;
-    min-height: 80vh;
+    min-height: 90vh;
     width: 100%;
     margin-bottom: 4rem;
 }
@@ -17,7 +17,7 @@
 
 .techIntro{
   color:rgb(201, 227, 230);
-    width: 50vw;
+    max-width:40em;
     margin:1em;
     padding: 1em;
     font-size: 1.1em;
@@ -27,8 +27,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content:space-evenly;
-    margin:20px;
-    padding: 20px;
     width:70vw
 }
 
