--- a/portfolio/src/components/About/Comment/Comment.css
+++ b/portfolio/src/components/About/Comment/Comment.css
@@ -3,9 +3,9 @@
     position:relative;
     height: 12em;
     width: 15em;
-    margin:20px;
+    margin:1em;
     border-radius: 5%;
-    box-shadow: 0.5em 0.6em 2em  ;
+    box-shadow: 0.3em 0.2em 2em rgb(255, 255, 0)  ;
 }
 .comment{
     background-color: rgb(12, 182, 86);
@@ -14,17 +14,22 @@
      bottom: -1.2em;
     height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
     text-align: center;
      border-radius: 5%;
-}
+    
+} 
 .comment h2{
   color:rgb(4, 2, 48);
+  font-size: 1.4rem;
   
 }
+/*
 .commentBox p{
   line-height: 1.4;
   padding-left: 0.5em;
   padding-right: 0.5em;
 
  
-}
+} */
