--- a/portfolio/src/components/Home/Home.css
+++ b/portfolio/src/components/Home/Home.css
@@ -8,18 +8,19 @@
 .welcomeMsg{
     text-align: center;
      padding: 10px;
+     margin:1em;
+     font-family:'Times New Roman', Times, serif;
 }
 .firstN{
-    color:rgb(20, 154, 220);
+    color:rgb(220, 80, 20);
     
 }
 .lastN{
- 
-      color:purple;
+      color:rgb(188, 22, 213);
 }
 .homeContainer{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap:wrap; 
     
 }
@@ -52,7 +53,7 @@
 
 .icon{
      transform: scale(1.4);
-    color: plum
+   color:rgb(183, 193, 190)
     
 }
 
