--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -1,10 +1,9 @@
 .footer{
     padding-top: 3em;
-    min-height: 80vh;
    background-color: rgb(233, 89, 89);
     display: flex;
     flex-direction: column;
-    border-radius: 40%;
+    border-radius: 50%;
 }
 .footerContainer{
     display: flex;
@@ -15,9 +14,13 @@
     display: flex;
      margin:1rem;
     width:22em;
+    padding:1rem;
 }
 label{
     margin:10px
+}
+form ::placeholder{
+    color: grey !important;
 }
 
 .footerLowerPart{
