--- a/portfolio/src/components/Projects/Project/Project.css
+++ b/portfolio/src/components/Projects/Project/Project.css
@@ -1,6 +1,8 @@
  .singleProject{ 
     height: 30vh;
     margin:0.3em;
+    border:2px solid rgb(141, 61, 221);
+    box-shadow: 0.1em 0.1em 1em  rgb(141, 65, 216);
 }
 
 .singleProject:hover{
